# rotaanaesthesiacmc

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  plan and requirements.txt  start.ps1
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260505_0001_initial_domain_schema.py  20260506_0002_import_traceability.py  (+15 more)
backend/analysis_rebuild_output/: README.md  alias_suggestions.csv  matched_duties.csv  matched_postings.csv  monthly_tallies.csv  person_tallies.csv  reference_month_comparison.csv  skipped_names.csv  summary.json
backend/analysis_rebuild_output_new/: README.md  alias_review_priority.csv  alias_suggestions.csv  matched_duties.csv  matched_postings.csv  monthly_tallies.csv  paired_duty_checks.csv  person_tallies.csv  reference_month_comparison.csv  skipped_names.csv  summary.json
backend/app/: __init__.py  main.py
backend/tests/: test_admin_mappings.py  test_analysis.py  test_auth.py  test_call_clusters.py  test_department_roster_reset.py  test_health.py  test_historical_import.py  test_import_classification.py  test_imports.py  test_leave.py  test_members.py  test_models.py  test_name_resolution.py  test_roster_reconciliation.py  test_rota_assignment.py  test_rota_auto_fill.py  test_rota_candidates.py  test_rota_publish.py  test_rota_review.py  test_rota_rules.py  test_rota_safety.py  test_rota_setup.py  test_rota_template.py  test_unit_management.py  test_unitwise_call_levels.py  test_validation.py
(+128 files in other folders)
